--- a/trunk/Server Parser 2/Server Parser 2.csproj
+++ b/trunk/Server Parser 2/Server Parser 2.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmDedi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDedi.Designer.cs">
+      <DependentUpon>frmDedi.cs</DependentUpon>
+    </Compile>
     <Compile Include="ListViewSortManager.cs" />
     <Compile Include="frmDvars.cs">
       <SubType>Form</SubType>
@@ -65,6 +71,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmDedi.resx">
+      <DependentUpon>frmDedi.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmDvars.resx">
       <DependentUpon>frmDvars.cs</DependentUpon>
       <SubType>Designer</SubType>
